--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "rollup-plugin-sizes": "^1.0.4",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
+    "snowpack": "^3.5.6",
     "tailwindcss": "^2.2.4",
     "ts-jest": "^26.5.6",
     "typedoc": "^0.21.2",
