--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "dist"
   ],
   "scripts": {
+    "vite-dev": "vite",
+    "vite-build": "tsc && vite build",
+    "vite-serve": "vite preview",
     "all": "run-s clean lint lint-check build test",
     "clean": "rimraf build dist",
     "build": "rollup -c",
@@ -141,7 +144,8 @@
     "tailwindcss": "^2.2.4",
     "ts-jest": "^26.5.6",
     "typedoc": "^0.21.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "vite": "^2.4.1"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
